# Framii

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/realtime_effecter/app/: Application.h
include/realtime_effecter/graphics/: GraphicsContext.h  Window.h
include/realtime_effecter/media/: MediaFoundationContext.h
include/realtime_effecter/ui/: ImGuiContext.h
include/realtime_effecter/util/: HResultChecker.h
src/: main.cpp
src/app/: Application.cpp
src/graphics/: GraphicsContext.cpp  Window.cpp
src/media/: MediaFoundationContext.cpp
src/ui/: ImGuiContext.cpp
